# LabCore_llm

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  demo_gradio.py  generate.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  train.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs-pr.yml  docs.yml  release.yml  security.yml
benchmarks/: index.html
configs/: base-multi.toml  base.toml  bpe_50M_rope_flash.toml  bpe_medium_50M.toml
configuration-reference/: index.html
data-pipeline/: index.html
developer-guide/: index.html
docs/: benchmarks.md  configuration-reference.md  data-pipeline.md  developer-guide.md  export-and-deployment.md  fine-tuning.md  getting-started.md  index.md  inference-and-demo.md  operations.md  training.md  troubleshooting.md
docs/fr/: index.md  (+11 more)
export-and-deployment/: index.html
fine-tuning/: index.html
fr/: index.html
getting-started/: index.html
inference-and-demo/: index.html
operations/: index.html
scripts/: __init__.py  benchmark_infer.py  export_hf.py  fine_tune_instruction.py  prepare_data.py  quantize_gguf.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_benchmark_infer.py  test_config.py  test_generation_sampling.py  test_model_forward.py  test_tokenizer_roundtrip.py  test_trainer_training.py
training/: index.html
troubleshooting/: index.html
(+45 files in other folders)
